--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   web:
     build: .
-    command: sh -c "uvicorn main:app --reload --host=0.0.0.0 --port=3000"
+    command: sh -c "uvicorn main:app --reload --port=3000"
     ports: 
       - "3000:3000"
     volumes:
